<?xml version="1.0"?>
<package>
  <!-- Package data -->
  <name>robotec_pid</name>
  <version>1.0.0</version>
  <description>PID</description>
  <license>Apache</license>

  <!-- Authors block -->
  <author email="illya.shvarov@gmail.com">Illia Shvarov</author>

  <!-- Maintainers block -->
  <maintainer email="illya.shvarov@gmail.com">Illia Shvarov</maintainer>

  <!-- ROS data -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>simple_pid</run_depend>
  <depend>dynamic_reconfigure</depend>
</package>
